...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/step_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:text="@string/ingredients"
...

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recepts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp" />


</LinearLayout>
...
