<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfa01e"
    tools:context="com.example.petergabor.bakingapp.AllRecipesActivity">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/all_recepts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>
